<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_mood_event_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D4EAFF">


    <!-- Top Bar with Back Button -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/add_mood_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/button_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="Back Button"
                android:src="@drawable/backarrow_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/salsa"
                android:paddingStart="42sp"
                android:text="Log Your Mood"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>


    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Mood Selection -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Mood:"
                android:textSize="18sp"
                android:fontFamily="@font/salsa"
                android:layout_marginBottom="8dp" />

            <RelativeLayout
                android:id="@+id/mood_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="4dp">

            <!-- Mood Dropdown, padding leaves space for emoji -->
            <Spinner
                android:id="@+id/dropdown_mood"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingEnd="48dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown" />

                <!-- Mood Emoji Display -->
                <TextView
                    android:id="@+id/mood_emoji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:textSize="24sp" />
            </RelativeLayout>

            <!-- Image Upload Section, Image Preview, Add Photo Button, Remove Photo Button -->
            <!-- Add Image Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/salsa"
                android:text="Add Photo (Optional):"
                android:textSize="18sp" />

            <!-- Image Preview -->
            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="#D4EAFF"
                android:layout_gravity="center"
                android:src="@drawable/add_post_icon"
                android:layout_marginTop="8dp" />

            <!-- Add Photo Button -->
            <Button
                android:id="@+id/button_add_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Choose Photo"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <!-- Remove Photo Button -->
            <Button
                android:id="@+id/button_remove_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remove Photo"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="gone"/>


            <!-- Reason Input -->
            <TextView
                android:id="@+id/add_reason_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/salsa"
                android:text="Reason (optional):"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_rounded_rectangle"
                android:gravity="top|start"
                android:hint="Enter reason"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:minHeight="50dp"
                android:padding="12dp"
                android:scrollbars="vertical"
                android:textSize="14sp" />

            <!-- Social Situation Dropdown -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Social Situation (Optional):"
                android:textSize="18sp"
                android:fontFamily="@font/salsa"
                android:layout_marginTop="12dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_background"
                android:padding="4dp">

                <Spinner
                    android:id="@+id/dropdown_social"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@android:color/transparent"
                    android:spinnerMode="dropdown" />
            </RelativeLayout>



            <!-- Location Label -->
            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Location (optional):"
                android:textSize="18sp"
                android:fontFamily="@font/salsa"
                android:layout_marginTop="12dp" />

            <!-- Location Autocomplete Fragment -->
            <fragment
                android:id="@+id/autocomplete_fragment"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:ignore="MissingClass" />

            <!-- Spotify Song Input (optional) -->
            <EditText
                android:id="@+id/spotify_song_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="Paste Spotify song link (optional)"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:padding="12dp" />

            <!-- Public or Private Setting Label -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set Private or Public Mood Event"
                android:textSize="18sp"
                android:fontFamily="@font/salsa"
                android:layout_marginTop="12dp" />

            <!-- Privacy Toggle -->
            <ToggleButton
                android:id="@+id/is_public_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textOn="Public"
                android:textOff="Private"
                android:textSize="24sp" />

            <!-- Save Button -->
            <Button
                android:id="@+id/button_save_mood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save Mood"
                android:background="@color/white"
                android:textColor="@color/black"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/salsa"
                android:layout_marginBottom="16dp"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <!-- ProgressBar centered on the screen -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</LinearLayout>