<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_drawable">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="307dp"
        android:layout_height="410dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/login_rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/salsa"
            android:text="Login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/login_black"
            android:textSize="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="21dp"
            android:fontFamily="@font/salsa"
            android:text="Email"
            android:textColor="@color/login_black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_login_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_text"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/edit_text_login_username"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_rounded_input"
            android:ems="10"
            android:fontFamily="@font/salsa"
            android:hint="Enter your username..."
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/login_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_account" />

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/salsa"
            android:text="Password"
            android:textColor="@color/login_black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/edit_text_login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login_username" />

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/login_rounded_input"
            android:ems="10"
            android:fontFamily="@font/salsa"
            android:hint="Enter your password..."
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/login_black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/salsa"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:text="Login"
            android:textColor="@color/login_black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/link_to_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_login_password" />

        <TextView
            android:id="@+id/link_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/salsa"
            android:text="Don't have an account? Sign up here"
            android:textColor="@color/login_black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.567" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
