...
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal"
            android:layout_marginRight="44dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/mood_history_filter_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="4dp"
            android:layout_marginBottom="12dp">

            <Spinner
...
